--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
   "bugs": {
     "url": "https://github.com/kastproductions/printify-client/issues"
   },
-  "homepage": "https://github.com/kastproductions/printify-client#readme"
+  "homepage": "https://github.com/kastproductions/printify-client#readme",
+  "dependencies": {
+    "node-fetch": "^3.2.10"
+  }
 }
