--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
   },
   "homepage": "https://github.com/kastproductions/printify-client#readme",
   "dependencies": {
-    "node-fetch": "^3.2.10"
+    "node-fetch": "2"
   }
 }
